--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -16,5 +16,5 @@ log:
 db:  # DB 配置 部署时环境变量覆盖
   name: MUXIKSTACK
   addr: 0.0.0.0:3306
-  username: root
-  password:
+  username: muxi
+  password: muxi
