--- a/.travis.yml
+++ b/.travis.yml
@@ -7,16 +7,15 @@ script: make test
 services:
   - mysql
 
-addons:
-  apt:
-    sources:
-      - mysql-5.7-trusty
-    packages:
-      - mysql-server
-
-dist: trusty
+dist: bionic
+#addons:
+#  apt:
+#    sources:
+#      - mysql-5.7-bionic
+#    packages:
+#      - mysql-server
 
 sudo: required
 
 before_script:
-  - mysql -u root --password="" < db.sql
+  - mysql -u muxi --password="muxi" < db.sql
