--- a/apiDoc.yaml
+++ b/apiDoc.yaml
@@ -889,7 +889,7 @@ paths:
                         content:
                           type: string
                           description: 评论内容
-                        like_sum:
+                        like_num:
                           type: integer
                           description: 点赞数
                         is_like:
@@ -974,7 +974,7 @@ paths:
                   is_like:
                     type: boolean
                     description: 点赞状态
-                  like_sum:
+                  like_num:
                     type: integer
                     description: 点赞数
         '400':
@@ -1141,7 +1141,7 @@ paths:
                   is_like:
                     type: boolean
                     description: 点赞状态
-                  like_sum:
+                  like_num:
                     type: integer
                     description: 点赞数
         '400':
@@ -1618,7 +1618,7 @@ definitions:
       is_anonymous:
         type: boolean
         description: 是否匿名
-      like_sum:
+      like_num:
         type: integer
         description: 点赞数
       is_like:
@@ -1650,7 +1650,7 @@ definitions:
       content:
         type: string
         description: 评论内容
-      like_sum:
+      like_num:
         type: integer
         description: 点赞数
       is_like:
