--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,7 +1,7 @@
 runmode: debug               # 开发模式, debug, release, test 部署时环境变量覆盖
-addr: :8080                  # HTTP绑定端口
-name: apiserver              # API Server的名字
-url: http://127.0.0.1:8080   # pingServer函数请求的API服务器的ip:port
+addr: :4096                  # HTTP绑定端口
+name: muxikstack              # API Server的名字
+url: http://127.0.0.1:4096   # pingServer函数请求的API服务器的ip:port
 max_ping_count: 10           # pingServer函数try的次数
 jwt_secret: muxikestackmuxistudiomuxiniubi
 log:
