--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -14,7 +14,7 @@ log:
   log_rotate_size: 1
   log_backup_count: 7
 db:  # DB 配置 部署时环境变量覆盖
-  name: MUXIKSTACK
+  name: muxikstack
   addr: 0.0.0.0:3306
   username: muxi
   password: muxi
