--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,9 @@ services:
 
 dist: bionic
 
+env:
+  - MUXIKSTACK_DB_USERNAME=root
+  - MUXIKSTACK_DB_PASSWORD=''
+
 before_script:
   - mysql -u root --password="" < db.sql
