--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -16,8 +16,8 @@ log:
 db:  # DB 配置 部署时环境变量覆盖
   name: muxikstack
   addr: 0.0.0.0:3306
-  username: root
-  password:
+  username: muxi
+  password: muxi
 oss:
   endpoint:
   access_key_id:
