--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -4,6 +4,7 @@ name: muxikstack              # API Server的名字
 url: http://127.0.0.1:4096   # pingServer函数请求的API服务器的ip:port
 max_ping_count: 10           # pingServer函数try的次数
 jwt_secret: muxikestackmuxistudiomuxiniubi
+data_service_url: 127.0.0.1:50051
 log:
   writers: file,stdout # 部署时输出到 stdout
   logger_level: DEBUG
