--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -17,7 +17,7 @@ log:
 db:  # DB 配置 部署时环境变量覆盖
   name: muxikstack
   addr: 0.0.0.0:3306
-  username: muxi
+  username: root
   password: muxi
 oss:
   access_key:
