--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -18,7 +18,7 @@ db:  # DB 配置 部署时环境变量覆盖
   name: muxikstack
   addr: 127.0.0.1:3306
   username: muxi
-  password: muxi
+  password: 123
 oss:
   access_key:
   secret_key:
