--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -25,7 +25,7 @@ oss:
   bucket_name:
   domain_name:
 qq:
-  app_id: ""
+  appid: ""
   app_secret: ""
 default_user:
   avatar: https://avatars2.githubusercontent.com/u/43539191?s=460&v=4
